--- a/src/App/vid-hero/styles.css
+++ b/src/App/vid-hero/styles.css
@@ -16,8 +16,9 @@
 
 .vid-containter-h1 {
     font-family: 'Press Start 2P', cursive;
-    text-shadow: 1px 1px 1px black;
+    text-shadow: 5px 5px 5px black;
     color: white;
+    font-size: 10vh;
 }
 
 .vid-box-container {
@@ -30,7 +31,10 @@
     flex-grow: 1;
     flex-direction: row;
     text-align: center;
-    border: 1px solid #6C2A05;
+}
+
+.vid-box-player {
+    border: 1px solid white;
 }
 
 .vid-box-title {
@@ -40,32 +44,17 @@
 
 
 @media only screen and (max-width: 800px) {
-    .container {
-        justify-content: space-around;
-    }
-}
-
-
-@media only screen and (min-width: 501px) {
-    .resp-navbar-item {
-        display: none;
+    .vid-containter-h1 {
+        font-size: 5vh;
     }
 }
 
 @media only screen and (max-width: 500px) {
-    .container {
-        flex-direction: column; 
-        display: block;
-
-        padding-top: 0.2vh;
-        padding-bottom: 0.2vh;
+    .vid-containter-h1 {
+        font-size: 6vh;
     }
 
-    .navbar-item {
-        display: none;
-    }
-
-    .hamburger {
-        display: flex;
+    .vid-box-player {
+        width: 380px;
     }
 }
