reduxified and mapped data

--- a/src/App/Header/styles.css
+++ b/src/App/Header/styles.css
@@ -3,7 +3,7 @@
     border: 1px solid black;
     padding-top: 1vh;
     padding-bottom: 1vh;
-    background-color: saddlebrown;
+    background-color: #804715;
 
     display: flex;
     flex-flow: row wrap;
