--- a/src/App/Vid-Section/styles.css
+++ b/src/App/Vid-Section/styles.css
@@ -42,6 +42,10 @@
     color: #E29A72;
 }
 
+.loading-eggtimer {
+    align-items: center;
+    text-align: center;
+}
 
 @media only screen and (max-width: 800px) {
     .vid-containter-h1 {
